5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1578_1332.log
== SUBMITION (2019-03-13 13:44:43) 
-- CODE:
aresta =5


area = 12.9903
 
print(round(area, 4))
-- EXECUTION TIME:
0.171499
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9903
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 13:45:06) 
-- CODE:
aresta =5


area = 12.9903
 
print(round(area, 4))
print(12.9903)
-- EXECUTION TIME:
0.217496
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9903
12.9903
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:55:36) 
-- CODE:
aresta =5


area = 3 / 4 * 3 ** 1/2 * a ** 2
 
print(round(area, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = 3 / 4 * 3 ** 1/2 * a ** 2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:57:17) 
-- CODE:
aresta =5


area = 3 / 4 * 3 ** 0.5 * a ** 2
 
print(round(area, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = 3 / 4 * 3 ** 0.5 * a ** 2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:57:50) 
-- CODE:
aresta =5


area = 3 / 4 * (3)**0.5 * a ** 2
 
print(round(area, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = 3 / 4 * (3)**0.5 * a ** 2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:58:47) 
-- CODE:
aresta =5


area = 3/4 * (3)**0.5 * (a)**2
 
print(round(area, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = 3/4 * (3)**0.5 * (a)**2
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 11:59:45) 
-- CODE:
aresta =5


area = 3/4(3)**0.5(a)**2
 
print(round(area, 4))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    area = 3/4(3)**0.5(a)**2
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 18:11:01) 
-- CODE:
aresta =5


area = (3/2)*(3**0.5*aresta*2)
 
print(round(area, 4))

-- OUTPUT:
25.9808
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 18:11:17) 
-- CODE:
aresta =5


area = (3/2)*(3**0.5*aresta**2)
 
print(round(area, 4))

-- EXECUTION TIME:
0.169012
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
